# CWKVulkanEngine

./: .gitattributes  .gitignore  CMakeLists.txt  FrameWork01.sln  Install Vulkan.bat  InstallVulkan.bat  README.md  linux_build.sh  windows_build.bat
.github/ISSUE_TEMPLATE/: bug-report.md
FrameWork/: Application.cpp  Application.h  Blinn Phong.h  BlinnPhong.cpp  BlinnPhong.h  Camera.cpp  Camera.h  Common.cpp  Common.h  Controller.cpp  Controller.h  Debug.cpp  Debug.h  FrameWork.vcxproj  FrameWork.vcxproj.filters  Geometry.h  Main.cpp  Mesh.cpp  Mesh.h  Object.cpp  Object.h  Physics.cpp  Physics.h  Time.cpp  Time.h  Timer.cpp  blinn.frag  blinn.vert  blinnfrag.spv  blinnvert.spv  frag.spv  gcube.mtl  imgui.ini  pch.h  simple.frag  simple.vert  vert.spv
FrameWork/x64/Debug/: FrameWork.exe.recipe  FrameWork.ilk  application.obj.enc  vc143.idb
FrameWork/x64/Debug/FrameWork.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  FrameWork.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
FrameWork/x64/Release/: FrameWork.exe.recipe  FrameWork.iobj  FrameWork.ipdb
FrameWork/x64/Release/FrameWork.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  FrameWork.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
ImGui/: ImGui.vcxproj  pch.h
src/: Application.cpp  ApplicationGlobal.cpp  BlinnPhong.cpp  Buffer.cpp  Camera.cpp  CameraController.cpp  Common.cpp  Controller.cpp  Debug.cpp  FrameWork.vcxproj  FrameWork.vcxproj.filters  HotReloader.cpp  Main.cpp  Object.cpp  ObjectManager.cpp  Physics.cpp  TextureManager.cpp  ThreadPool.cpp  Timer.cpp  UserInterface.cpp  imgui.ini  vkBuffer.cpp  vkContextBase.cpp  vkCubemap.cpp  vkCubemap.h  vkDebug.cpp  vkDeferredShadingContext.cpp  vkDevice.cpp  vkFreddyHeadContext.cpp  vkGlobal.cpp  vkGraphicsSystem.cpp  vkInit.cpp  vkMesh.cpp  vkPipeline.cpp  vkPipelineManager.cpp  vkRenderResources.cpp  vkResource.cpp  vkScene.h  vkShadowMapContext.cpp  vkSwapChain.cpp  (+3 more)
src/Include/: AppWindow.h  Application.h  ApplicationGlobal.h  BlinnPhong.h  Buffer.h  Camera.h  Common.h  Controller.h  ControllerBase.h  Debug.h  HotReloader.h  Object.h  ObjectManager.h  Physics.h  SceneBase.h  SpirvHelper.h  TextureManager.h  ThreadPool.h  Timer.h  UserInterface.h  Vertex.h  VkPipeline.h  Vulkan.h  pch.h  vkBuffer.h  vkContextBase.h  vkCubemap.h  vkDebug.h  vkDeferredShadingContext.h  vkDevice.h  vkFreddyHeadContext.h  vkGlobal.h  vkGraphicsSystem.h  vkInit.h  vkMesh.h  vkParticle.h  vkPipelineManager.h  vkRenderResources.h  vkRenderer.h  vkResource.h  (+6 more)
src/Shaders/: blinn.frag  blinn.spv  blinn.vert  blinnForward.frag  blinnForward.vert  blinnForwardfrag.spv  blinnForwardvert.spv  blinnfrag.spv  blinnvert.spv  color.frag  color.vert  colorfrag.spv  colorvert.spv  debugShadowMap.frag  debugShadowMapfrag.spv  deferredLightPass.frag  deferredLightPassfrag.spv  deferredMRT.frag  deferredMRT.vert  deferredMRTfrag.spv  deferredMRTvert.spv  offscreenShadowMap.frag  offscreenShadowMap.vert  offscreenShadowMapvert.spv  particles.comp  sceneShadowMap.frag  sceneShadowMap.vert  sceneShadowMapfrag.spv  sceneShadowMapvert.spv  shadowMapForward.frag  shadowMapForward.vert  shadowMapForwardfrag.spv  shadowMapForwardvert.spv  vert.spv
